- Added JCalibrationGenerator class and ability to install new types of
  calibration and conditions database backends.
- Added a Web Services implementation of JCalibration using gSOAP
- Added additional Get method to JCalibration that accepts a pointer
  reference so constants can be stored in JCalibration and recycled

Changes in version 0.4.8

- Replaced stray instances of "uint" in JEventLoop.X with "unsigned int"
- Added CERNLIB support to autoconf configuration
- Added janahbook utility. This currently is unfinished.
- Added warnings counter to janaroot plugin for data of unknown type
- Added JANAROOT_VERBOSE config parameter to janaroot plugin
- Improved mutex locking while accessing thread-related members of JApplication
- Added THREAD_TIMEOUT config parameter to allow setting from command line
- Launch a new thread if a dead one is terminated
- Fixed "hard" exiting when 3 or more SIGINTs are received
- Exit with message if a plugin is specified, but not found

Changes in version 0.4.7

- Added janaroot plugin for automatic generation of ROOT trees from object
- Create symbolic link to src directory if no "src" dir/file exists in the
  installation directory
- Fixed event rate reported so the events already read into buffer, but not
  yet processed aren't included
- Cleaned up base JANA Usage statement and implemented in the jana utility
- Added --config option to read in configuration parameters from a file
- Added EVENTS_TO_SKIP and EVENTS_TO_KEEP to JApplication so one can specify
  a specific range of events to process from the command line
- Modified autoconf and BMS to have configuration set in Makefile.config
  rather than Makefile.common
- Added ROOT m4 macro to configure.ac. ROOT configuration now set when
  configure script is run rather than at build time by running root-config
  then
- Switched from using OSNAME to BMS_OSNAME as the platform specific variable
  name to avoid conflicts on systems that use OSNAME for other purposes.